= reposurgeon project news =

Repository head::
     Support property deletions from version 3 dump file format in repocutter.

4.15: 2020-07-18::
     Documentation polishing.
     Fix buggy handling of symlinks in the tarball-maker production.
     Fix a stupid bug in the distribution's "make clean".

4.14: 2020-06-27::
     Build fixes for Mac OS X (Darwin).

4.13: 2020-06-24::
     Now interprets and translates svn:global-ignores properties.
     Numerous small improvements to documentation.

4.12: 2020-06-21::
     Snap release to fix broken tarball production (revised).

4.11: 2020-06-16::
     Minor bug fixes for lint and graph commands.

4.10: 2020-05-28::
     The default conversion workflow has been simplified and sped up.
     New crlf operation allows editing comments with Windows line endings.
     Bug fix for timequake and timeoffset commands.
     Randomize temporary directories during repotool compare.
     The ignores and strip commands now use the regular option syntax.
     All command help items now begin with a syntax summary.
     Repomapper can now mine project mail archives.
     The "prompt" command has been retired.

4.9: 2020-05-17::
     This is a long-term-stable release. All packagers should update.
     Documentation has undergone a serious polishing pass.
     The 'memory' command supports output redirection.
     A CVSROOT subdirectory is no longer required to recognize a CVS repo.
     The diff utility is no longer required by repotool.

4.8: 2020-05-13::
     Repository reads now use --show-original-ids.
     The ~ pattern-negation operator has been added to expunge.
     Expunges no longer create a synthetic repository for deleted fileops.
     Minor bugfixes for filter --regexp option handling.
     Added "deselect" command to repocutter.
     The last Python dependency is gone.
     repocutter and repotool have version commands.

4.7: 2020-04-26::
     If "foo" names a reset, "<foo>" names the commit it points to.